--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@ body {
 </head>
 <body>
 
-<form>
+<form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSenCI5uCoiMRjh0PdGaz9Ikq6oKPnWc8l1NUk0OyMipbf1CAQ/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
   First name:<br>
-  <input type="radio" id="use" name="why" value="I want to use it."><br>
+  <input type="radio" id="use" name="entry.1720281438" value="I want to use it." checked=true><br>
   <input type="radio" id="talk" name="why" value="I want to talk about it."><br>
   Last name:<br>
-  <input type="text" name="notes">
-  <input type="text" name="email">
+  <input type="text" name="entry.920678105" id="entry.920678105" value="Email">
+  <input type="text" name="entry.1595614991" id="entry.1595614991" value="Notes">
   <input type="submit" value="Submit">
 </form>
 
