--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
 </head>
 <body>
 
-<form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSenCI5uCoiMRjh0PdGaz9Ikq6oKPnWc8l1NUk0OyMipbf1CAQ/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
+<form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSenCI5uCoiMRjh0PdGaz9Ikq6oKPnWc8l1NUk0OyMipbf1CAQ/viewform?usp=pp_url&formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
   First name:<br>
   <input type="radio" id="use" name="entry.1720281438" value="I want to use it." checked=true><br>
   <input type="radio" id="talk" name="why" value="I want to talk about it."><br>
