--- a/index.html
+++ b/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Page Title</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-</style>
-</head>
-<body>
-
-<form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSenCI5uCoiMRjh0PdGaz9Ikq6oKPnWc8l1NUk0OyMipbf1CAQ/viewform?usp=pp_url&formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
-  First name:<br>
-  <input type="radio" id="use" name="entry.1720281438" value="I want to use it." checked=true><br>
-  <input type="radio" id="talk" name="why" value="I want to talk about it."><br>
-  Last name:<br>
-  <input type="text" name="entry.920678105" id="entry.920678105" value="Email">
-  <input type="text" name="entry.1595614991" id="entry.1595614991" value="Notes">
-  <input type="submit" value="Submit">
-</form>
-
-</body>
-</html>
+<meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSenCI5uCoiMRjh0PdGaz9Ikq6oKPnWc8l1NUk0OyMipbf1CAQ/viewform?usp=pp_url&entry.1720281438=I+want+to+use+it.&entry.1595614991=Notes&entry.920678105=Email'" />
