--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSenCI5uCoiMRjh0PdGaz9Ikq6oKPnWc8l1NUk0OyMipbf1CAQ/viewform?usp=pp_url&entry.1720281438=I+want+to+use+it.&entry.1595614991=Notes&entry.920678105=Email'" />
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSenCI5uCoiMRjh0PdGaz9Ikq6oKPnWc8l1NUk0OyMipbf1CAQ/viewform?usp=pp_url'" />
+  </head>
+  <body>
+    <p>Redirecting to https://docs.google.com/forms/d/e/1FAIpQLSenCI5uCoiMRjh0PdGaz9Ikq6oKPnWc8l1NUk0OyMipbf1CAQ/viewform?usp=pp_url</p>
+  </body>
+</html>
