--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <p>Redirecting to https://docs.google.com/forms/d/e/1FAIpQLSenCI5uCoiMRjh0PdGaz9Ikq6oKPnWc8l1NUk0OyMipbf1CAQ/viewform?usp=pp_url</p>
-    <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSenCI5uCoiMRjh0PdGaz9Ikq6oKPnWc8l1NUk0OyMipbf1CAQ/viewform?usp=pp_url" alt="Link to the google form for CanWeBeDirect">Just take me to the form already.</a></p>
+    <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSenCI5uCoiMRjh0PdGaz9Ikq6oKPnWc8l1NUk0OyMipbf1CAQ/viewform?usp=pp_url" alt="Link to the google form for CanWeBeDirect">Just take me to the form, already.</a></p>
   </body>
 </html>
